@@ -1,3 +1,7 @@
+2010-04-20  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclTest.c   Use function prototypes from the FS API.
+
 2010-04-19  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclExecute.c (TclExecuteByteCode): Improve commenting and
